intro나중에보기 버튼 연결/지역선택창수정/뷰위치 조정(순서가 바뀜)/버튼선택백그라운드 추가/onclick-databinding연결

--- a/app/src/main/res/layout/fragment_intro_base.xml
+++ b/app/src/main/res/layout/fragment_intro_base.xml
@@ -36,7 +36,8 @@
             android:textColor="#6d7278"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:onClick="@{intro::onLaterClick}"/>
 
         <RelativeLayout
             android:id="@+id/indicator_view"
