--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,100 +2,86 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="mainfrag"
+            type="com.thustop_00.MainFragment" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+
+        <View
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="112dp"
             android:background="@color/colorPrimary"
-            android:elevation="0dp"
+            android:elevation="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"/>
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:elevation="1dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="?attr/actionBarSize" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="11dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="?attr/actionBarSize" />
 
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tvSelLocal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/main_sel_local"
+            android:elevation="11dp"
+            android:paddingStart="40dp"
+            android:paddingTop="9dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="9dp"
+            android:text="서비스 지역 선택"
+            android:textColor="#979797"
+            android:textSize="13sp"
+            android:onClick="onTextViewClicked"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="@id/top_layout"
+            app:layout_constraintEnd_toEndOf="@id/top_layout"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            tools:ignore="HardcodedText" />
 
-            <Spinner
-                android:id="@+id/sp_prov"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:elevation="1dp"
-                android:entries="@array/province"
-                android:overlapAnchor="false"
-                android:paddingStart="0dp"
-                android:paddingEnd="0dp"
-                android:popupBackground="@drawable/main_sel_local"
-                app:layout_constraintBottom_toBottomOf="@id/tvSelLocal"
-                app:layout_constraintEnd_toEndOf="@id/tvSelLocal"
-                app:layout_constraintStart_toStartOf="@id/tvSelLocal"
-                app:layout_constraintTop_toTopOf="@id/tvSelLocal" />
+        <ImageView
+            android:id="@+id/ivSelLocal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="9dp"
+            android:elevation="11dp"
+            android:src="@drawable/icon_down"
+            app:layout_constraintBottom_toBottomOf="@id/tvSelLocal"
+            app:layout_constraintStart_toStartOf="@id/tvSelLocal"
+            app:layout_constraintTop_toTopOf="@id/tvSelLocal"
+            tools:ignore="ContentDescription" />
 
-            <com.thustop_00.widgets.NotoTextView
-                android:id="@+id/tvSelLocal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/main_sel_local"
-                android:elevation="2dp"
-                android:paddingStart="40dp"
-                android:paddingTop="9dp"
-                android:paddingEnd="5dp"
-                android:paddingBottom="9dp"
-                android:text="서비스 지역 선택"
-                android:textColor="#979797"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="@id/top_layout"
-                app:layout_constraintEnd_toStartOf="@id/gps"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/guideline1"
-                tools:ignore="HardcodedText" />
-
-            <ImageView
-                android:id="@+id/ivSelLocal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="9dp"
-                android:elevation="3dp"
-                android:src="@drawable/icon_down"
-                app:layout_constraintBottom_toBottomOf="@id/tvSelLocal"
-                app:layout_constraintStart_toStartOf="@id/tvSelLocal"
-                app:layout_constraintTop_toTopOf="@id/tvSelLocal"
-                tools:ignore="ContentDescription" />
-
-            <ImageButton
-                android:id="@+id/gps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/main_sel_local"
-                android:elevation="2dp"
-                android:paddingStart="9dp"
-                android:paddingTop="6dp"
-                android:paddingEnd="9dp"
-                android:paddingBottom="6dp"
-                android:src="@drawable/gps_main"
-                app:layout_constraintBottom_toBottomOf="@id/top_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/guideline1"
-                tools:ignore="ContentDescription" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
+        <ImageView
+            android:id="@+id/gps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:padding="4dp"
+            android:elevation="11dp"
+            android:src="@drawable/gps_main"
+            android:onClick="onImageViewClicked"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="@id/top_layout"
+            app:layout_constraintEnd_toEndOf="@id/tvSelLocal"
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            tools:ignore="ContentDescription" />
 
         <Button
             android:id="@+id/bt_new_route"
@@ -106,7 +92,7 @@
             android:layout_marginEnd="27dp"
             android:background="@drawable/outline_gray"
             android:paddingTop="55dp"
-            android:text="노선 생성하기"
+            android:text="@string/bt_new_route"
             android:textColor=" #757f8c"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +103,7 @@
             android:id="@+id/iv_route_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="10dp"
+            android:elevation="2dp"
             android:paddingTop="26dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -155,6 +141,95 @@
             tools:listitem="@layout/item_route">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+        <View
+            android:id="@+id/v_pause"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#65000000"
+            android:elevation="2dp"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_local"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/main_sel_local"
+            app:layout_constraintEnd_toEndOf="@id/tvSelLocal"
+            app:layout_constraintStart_toStartOf="@id/tvSelLocal"
+            app:layout_constraintTop_toBottomOf="@id/tvSelLocal"
+            android:elevation="11dp">
+
+            <com.thustop_00.widgets.NotoButton
+                android:id="@+id/bt_local1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="1"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/button_round_light_gray"
+                android:text="@string/bt_local1"
+                app:layout_constraintEnd_toStartOf="@id/bt_local2"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="@id/layout_local"
+                app:layout_constraintTop_toTopOf="@id/layout_local"
+                android:onClick="@{mainfrag::onLocal1Click}"/>
+
+            <com.thustop_00.widgets.NotoButton
+                android:id="@+id/bt_local2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="1"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/button_round_light_gray"
+                android:text="@string/bt_local2"
+                app:layout_constraintEnd_toStartOf="@id/bt_local3"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/bt_local1"
+                app:layout_constraintTop_toTopOf="@id/layout_local"
+                android:onClick="@{mainfrag::onLocal2Click}"/>
+
+            <com.thustop_00.widgets.NotoButton
+                android:id="@+id/bt_local3"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="1"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/button_round_light_gray"
+                android:text="@string/bt_local3"
+                app:layout_constraintEnd_toEndOf="@id/layout_local"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/bt_local2"
+                app:layout_constraintTop_toTopOf="@id/layout_local"
+                android:onClick="@{mainfrag::onLocal3Click}"/>
+
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_local1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/tv_local1"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@id/layout_local"
+                app:layout_constraintStart_toStartOf="@id/layout_local"
+                app:layout_constraintTop_toBottomOf="@id/bt_local2" />
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_local2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="30dp"
+                android:text="@string/tv_local2"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="@id/layout_local"
+                app:layout_constraintEnd_toEndOf="@id/layout_local"
+                app:layout_constraintTop_toBottomOf="@id/tv_local1"
+                app:layout_constraintBottom_toBottomOf="@id/layout_local"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
