gpsTracker class 생성, mainfragment에 gps버튼 활성화 후 구까지 tvselLocal에 표시/gps 퍼미션 확인부분 수정필요/

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,7 +47,7 @@
             android:text="서비스 지역 선택"
             android:textColor="#979797"
             android:textSize="13sp"
-            android:onClick="onTextViewClicked"
+            android:onClick="@{mainfrag::onSelLocalClick}"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="@id/top_layout"
             app:layout_constraintEnd_toEndOf="@id/top_layout"
@@ -76,7 +76,7 @@
             android:padding="4dp"
             android:elevation="11dp"
             android:src="@drawable/gps_main"
-            android:onClick="onImageViewClicked"
+            android:onClick="@{mainfrag::onGPSClick}"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="@id/top_layout"
             app:layout_constraintEnd_toEndOf="@id/tvSelLocal"
