--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -83,61 +83,16 @@
             app:layout_constraintTop_toTopOf="@id/guideline1"
             tools:ignore="ContentDescription" />
 
-        <Button
-            android:id="@+id/bt_new_route"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="22dp"
-            android:layout_marginEnd="27dp"
-            android:background="@drawable/outline_gray"
-            android:paddingTop="55dp"
-            android:text="@string/bt_new_route"
-            android:textColor=" #757f8c"
-            android:textSize="10sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/top_layout" />
-
-        <ImageView
-            android:id="@+id/iv_route_plus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="2dp"
-            android:paddingTop="26dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/bt_new_route"
-            app:srcCompat="@drawable/img_route_plus" />
-
-        <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/bt_new_route"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="22dp"
-            android:text="@string/tv_all"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bt_new_route"
-            app:notoTextStyle="bold" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_routes"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            android:paddingStart="27dp"
-            android:paddingTop="20dp"
-            android:paddingEnd="27dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_all"
+            app:layout_constraintTop_toBottomOf="@id/top_layout"
             tools:listitem="@layout/item_route">
 
         </androidx.recyclerview.widget.RecyclerView>
