--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -9,10 +9,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_marginLeft="27dp"
+        android:layout_height="155dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="11dp"
-        android:layout_marginRight="27dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/outline_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,33 +22,42 @@
             android:id="@+id/iv_main_departure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="23dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_main_buscode"
+            app:layout_constraintTop_toBottomOf="@id/iv_main_bus"
             app:srcCompat="@drawable/icon_departure" />
 
         <ImageView
             android:id="@+id/iv_main_destination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="18dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_main_departure"
             app:srcCompat="@drawable/icon_destination" />
 
         <TextView
-            android:id="@+id/tv_main_buscode"
+            android:id="@+id/tv_main_code"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="18dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="8dp"
             android:text="A15"
             android:textColor="#171d33"
             android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_main_bus"
+            app:layout_constraintStart_toEndOf="@id/iv_main_bus" />
+
+        <ImageView
+            android:id="@+id/iv_main_bus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="14dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon_bus_green" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
