--- a/app/src/main/res/layout/fragment_intro_child.xml
+++ b/app/src/main/res/layout/fragment_intro_child.xml
@@ -22,18 +22,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/iv_intro_page"
-                android:layout_marginBottom="50dp"
+
                 android:bufferType="spannable"
                 android:textColor="#423f3f"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:text="@string/tv_intro_page3"
                 android:layout_alignLeft="@+id/iv_intro_page" />
 
             <ImageView
                 android:id="@+id/iv_intro_page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_intro_page" />
+                android:layout_below="@+id/tv_intro_page"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="0dp"
+                android:src="@drawable/img_intro3"/>
 
         </RelativeLayout>
 
