약관동의수정(체크박스업뎃필요)/본인인증만드는중(스피너 말또안들음..ㅎ)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#15a474</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorTextGray">#979797</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#ffffff</color>
 </resources>
