--- a/app/src/main/res/layout/fragment_agree__terms.xml
+++ b/app/src/main/res/layout/fragment_agree__terms.xml
@@ -6,46 +6,124 @@
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="?attr/actionBarSize" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_agree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/tv_agree"
+            android:textColor="@android:color/black"
+            android:textSize="21sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/iv_agree"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.36">
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            app:layout_constraintVertical_bias="0.19999999"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:notoTextStyle="bold" />
 
-            <com.thustop_00.widgets.NotoTextView
-                android:id="@+id/tv_agree"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="21dp"
-                android:text="@string/tv_agree"
-                android:textColor="@android:color/black"
-                android:textSize="21sp"
-                android:textStyle="bold"
-                app:notoTextStyle="bold" />
+        <ImageView
+            android:id="@+id/iv_agree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            app:srcCompat="@drawable/img_terms"
+            app:layout_constraintTop_toBottomOf="@id/tv_agree"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree_all"
+            />
 
-            <com.thustop_00.widgets.NotoTextView
-                android:id="@+id/tv_agree_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="72dp"
-                android:bufferType="spannable"
-                android:text="@string/tv_agree_content"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textStyle="normal" />
+        <CheckBox
+            android:id="@+id/cb_agree_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:button="@drawable/custom_checkbox"
+            android:text="@string/cb_agree_all"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/iv_agree"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree1"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/img_terms" />
+        <CheckBox
+            android:id="@+id/cb_agree1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/cb_agree1"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cb_agree_all"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree2"/>
 
+        <CheckBox
+            android:id="@+id/cb_agree2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:button="@android:color/transparent"
+            android:text="@string/cb_agree2"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cb_agree1"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree3"/>
 
-        </LinearLayout>
+        <CheckBox
+            android:id="@+id/cb_agree3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:button="@android:color/transparent"
+            android:text="@string/cb_agree3"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cb_agree2"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree4"/>
+
+        <CheckBox
+            android:id="@+id/cb_agree4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:button="@android:color/transparent"
+            android:text="@string/cb_agree4"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cb_agree3"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree5"/>
+
+        <CheckBox
+            android:id="@+id/cb_agree5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:button="@android:color/transparent"
+            android:text="@string/cb_agree5"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cb_agree4"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree6"/>
+
+        <CheckBox
+            android:id="@+id/cb_agree6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:button="@android:color/transparent"
+            android:text="@string/cb_agree6"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cb_agree5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/tv_agree"/>
 
         <com.thustop_00.widgets.NotoButton
             android:id="@+id/bt_agree"
