--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="province">
-        <item>서울</item>
-        <item>경기</item>
-        <item>인천</item>
-        <item>강원</item>
-        <item>대전</item>
-        <item>세종</item>
-        <item>충남</item>
-        <item>충북</item>
-        <item>부산</item>
-        <item>울산</item>
-        <item>경남</item>
+    <string-array name="nationality">
+        <item>내국인</item>
+        <item>외국인</item>
     </string-array>
 
 
