본인인증 스피너,edittext,timer/edittext 쓰는 뷰에서는 키보드 외부 터치시 키보드 닫히게 하는게 어떨까유..일단 본인인증fragment에 시험적용해놓음/비밀번호찾기, 회원가입 레이아웃 완료(+자바는 수정필요)

--- a/app/src/main/res/layout/fragment_find_password.xml
+++ b/app/src/main/res/layout/fragment_find_password.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.Guideline
@@ -16,41 +16,41 @@
             app:layout_constraintGuide_begin="?attr/actionBarSize" />
 
 
+
         <com.thustop_00.widgets.NotoEditText
-            android:id="@+id/et_pass"
-            style="@style/EtStyle"
-            android:layout_width="0dp"
+            android:id="@+id/et_name_find"
             android:layout_height="wrap_content"
+            android:layout_width="0dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
-            android:background="@drawable/button_round_outlineb6"
-            android:hint="@string/et_pass"
-            android:imeOptions="actionNext"
+            style="@style/EtStyle"
             android:textColor="@android:color/black"
             android:textColorHint="#979797"
-            app:layout_constraintBottom_toTopOf="@id/et_check"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/et_name_find"
+            android:background="@drawable/button_round_outlineb6"
+            app:layout_constraintBottom_toTopOf="@id/et_phone_find"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_bias="0.15"
+            app:layout_constraintVertical_chainStyle="packed"
+            android:imeOptions="actionDone"
+            />
 
-            app:layout_constraintVertical_chainStyle="packed" />
 
         <com.thustop_00.widgets.NotoEditText
-            android:id="@+id/et_check"
+            android:id="@+id/et_phone_find"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             style="@style/EtStyle"
-            android:hint="@string/et_check"
+            android:hint="@string/et_phone_find"
             android:textColorHint="#979797"
             android:background="@drawable/button_round_outlineb6"
-            app:layout_constraintTop_toBottomOf="@id/et_pass"
-            app:layout_constraintStart_toStartOf="@id/et_pass"
-            app:layout_constraintEnd_toEndOf="@id/et_pass"
+            app:layout_constraintTop_toBottomOf="@id/et_name_find"
+            app:layout_constraintStart_toStartOf="@id/et_name_find"
+            app:layout_constraintEnd_toEndOf="@id/et_name_find"
             app:layout_constraintBottom_toBottomOf="parent"
-
             />
 
         <com.thustop_00.widgets.NotoButton
@@ -58,21 +58,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/button_round_c4"
+            android:background="@drawable/button_round_green"
             android:paddingTop="17dp"
             android:paddingBottom="17dp"
-            android:text="@string/bt_confirm"
+            android:text="@string/bt_IssuePass_find"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
             app:notoTextStyle="medium"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/et_check"
-            app:layout_constraintStart_toStartOf="@id/et_check"
+            app:layout_constraintEnd_toEndOf="@id/et_phone_find"
+            app:layout_constraintStart_toStartOf="@id/et_phone_find"
             app:layout_constraintTop_toTopOf="@id/guideline1"
             app:layout_constraintVertical_bias="0.9" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </layout>
